--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>roshambo</name>
-	<comment>Project roshambo created by Buildship.</comment>
+	<name>EventManagement</name>
+	<comment>Project EventManagement created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
